--- a/ex-react/src/Button.css
+++ b/ex-react/src/Button.css
@@ -1,9 +1,12 @@
-.button{
+.button{ 
+    box-sizing: border-box;
+    display: inline-block;
     width: 25%;
     height: 100%;
     border: 1px solid black;
     background-color: white;
     color: black; 
+    text-align: center;
 }
 .button:hover{
     background-color: #858694;
